--- a/vendas.ipynb
+++ b/vendas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMiheyj4dq0WRAtYefvtTa2",
+      "authorship_tag": "ABX9TyOvWbQleO4Wo/2IWGj6FNlJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +27,29 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Análise de dados em busca de melhorias para as vendas"
+      ],
+      "metadata": {
+        "id": "Wl9K2XZsrZC_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "> Iniciando pela importação de biblioteca e dataset\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "HyBvPM01rvoJ"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 7,
       "metadata": {
         "id": "tvUDXwYBsbgB"
       },
@@ -45,8 +66,15 @@
       "metadata": {
         "id": "lu21zg6fGqXQ"
       },
-      "execution_count": 3,
+      "execution_count": 9,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "vFqG2Q-vr9PK"
+      }
     },
     {
       "cell_type": "code",
@@ -61,7 +89,7 @@
         "id": "YKWXkWSOHF0Q",
         "outputId": "616e91c1-39aa-484e-aa80-6cc7dd1fdc66"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
