--- a/vendas.ipynb
+++ b/vendas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOvWbQleO4Wo/2IWGj6FNlJ",
+      "authorship_tag": "ABX9TyP0pnX5KoRMqeigCrQfA/oh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
       "source": [
         "\n",
         "\n",
-        "> Iniciando pela importação de biblioteca e dataset\n",
+        "> Iniciando pela importação de biblioteca e dataframe\n",
         "\n"
       ],
       "metadata": {
@@ -71,7 +71,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "\n",
+        "\n",
+        "> O dataframe possue dados sobre o código do produto, o produto, a quantidade, o nome do comprador, a data de compra, o local da loja e o preço por unidade\n",
+        "\n"
+      ],
       "metadata": {
         "id": "vFqG2Q-vr9PK"
       }
@@ -362,6 +367,17 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "> Primeiramente será feito uma limpeza dos dados para um melhor entendimento, pois em primeira observação notasse data em padrão americano, primeiro nome separado do sobrenome e falta do valor total das compras\n"
+      ],
+      "metadata": {
+        "id": "iPJBbv8EP_Bl"
+      }
     },
     {
       "cell_type": "code",
