--- a/vendas.ipynb
+++ b/vendas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP0pnX5KoRMqeigCrQfA/oh",
+      "authorship_tag": "ABX9TyNYLvOyAYt7Y1qOuu+bXnA2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Análise de dados em busca de melhorias para as vendas"
+        "# Análise de dados em busca de melhorias para as vendas"
       ],
       "metadata": {
         "id": "Wl9K2XZsrZC_"
@@ -38,9 +38,25 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## 1. Definição do problema"
+      ],
+      "metadata": {
+        "id": "nFq2Vu2I15cd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "6EtRERKh2Awd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "\n",
         "\n",
-        "> Iniciando pela importação de biblioteca e dataframe\n",
+        "## 1.Iniciando pela importação de biblioteca e dataframe\n",
         "\n"
       ],
       "metadata": {
@@ -367,17 +383,6 @@
           "metadata": {}
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "\n",
-        "\n",
-        "> Primeiramente será feito uma limpeza dos dados para um melhor entendimento, pois em primeira observação notasse data em padrão americano, primeiro nome separado do sobrenome e falta do valor total das compras\n"
-      ],
-      "metadata": {
-        "id": "iPJBbv8EP_Bl"
-      }
     },
     {
       "cell_type": "code",
