--- a/vendas.ipynb
+++ b/vendas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMuYjCye8otnr3OcO7wZDcj",
+      "authorship_tag": "ABX9TyPuGVsFI6/3MbTN46HIE9CM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -119,12 +119,12 @@
         "display(vendas)"
       ],
       "metadata": {
-        "id": "Q3NCWJxXVkGz",
-        "outputId": "0395c1fd-9b24-417e-e4d5-0b9781a17607",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
-        }
+        },
+        "id": "Q3NCWJxXVkGz",
+        "outputId": "0395c1fd-9b24-417e-e4d5-0b9781a17607"
       },
       "execution_count": 4,
       "outputs": [
@@ -592,11 +592,11 @@
         "vendas.info()"
       ],
       "metadata": {
-        "id": "DEfMkc2KcB3v",
-        "outputId": "33bad135-ddc9-497c-99ff-21427b8b89cd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DEfMkc2KcB3v",
+        "outputId": "33bad135-ddc9-497c-99ff-21427b8b89cd"
       },
       "execution_count": 9,
       "outputs": [
@@ -629,12 +629,12 @@
         "vendas [[\"Produto\", \"Quantidade Vendida\", \"Preco Unitario\"]].groupby(\"Produto\").sum()"
       ],
       "metadata": {
-        "id": "2RNhtLtJWRsA",
-        "outputId": "48986a34-e0ca-4abb-dccb-8f1f3ea87381",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
-        }
+        },
+        "id": "2RNhtLtJWRsA",
+        "outputId": "48986a34-e0ca-4abb-dccb-8f1f3ea87381"
       },
       "execution_count": 8,
       "outputs": [
@@ -819,8 +819,7 @@
       "source": [
         "\n",
         "\n",
-        "> Os dados apresentados precisam ser limpos por meio de remoção de duplicatas, de valores ausentes...\n",
-        "\n"
+        "> Para limpeza dos dados serão removidas duplicatas e valores ausentes\n"
       ],
       "metadata": {
         "id": "z75u3t_fU2DJ"
@@ -828,9 +827,347 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#remover duplicatas\n",
+        "vendas = vendas.drop_duplicates()\n",
+        "\n",
+        "#Remover linhas com valores ausentes\n",
+        "vendas = vendas.dropna()"
+      ],
       "metadata": {
         "id": "r8sHIcNvHJrB"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Transformação de dados"
+      ],
+      "metadata": {
+        "id": "td_JcXs4YduL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "> Na transformação dos dados, para melhor visualização, será nescessário formatar a data para o padrão brasileiro, juntar primeiro nome e sobrenome, mostrar o valor total das vendas...\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "VM1W3fGZd7wa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Converter a coluna 'data' para um objeto datetime\n",
+        "vendas['Data'] = pd.to_datetime(vendas['Data'])\n",
+        "\n",
+        "#Formatando as datas no formato brasileiro\n",
+        "vendas['Data'] = vendas['Data'].dt.strftime('%d/%m/%Y')"
+      ],
+      "metadata": {
+        "id": "BcFzV8TKceYD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "display(vendas)"
+      ],
+      "metadata": {
+        "id": "HzMoKqXbfRXs",
+        "outputId": "9fbf21f1-3dd9-4e77-de92-8bf36938b6ae",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 424
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "         SKU     Produto  Quantidade Vendida Primeiro Nome   Sobrenome  \\\n",
+              "0     HL4379   Televisão                   5       Gabriel       Thoni   \n",
+              "1     HL4379   Televisão                   3         Renan  Nascimento   \n",
+              "2     HL1148      Câmera                   2        Camila      Sobral   \n",
+              "3     HL1918      iPhone                   3         Clara       Bruno   \n",
+              "4     HL9962     Android                   4       Eduardo     Pacheco   \n",
+              "...      ...         ...                 ...           ...         ...   \n",
+              "9994  HL4379   Televisão                   2          Caio    Ferreira   \n",
+              "9995  HL1148      Câmera                   5           Kim    Ferreira   \n",
+              "9996  HL4379   Televisão                   5          Caio      Moraes   \n",
+              "9997  HL1918      iPhone                   4        Norman       Jimbo   \n",
+              "9998  HL7348  SmartWatch                   1      Vinícius     Antunes   \n",
+              "\n",
+              "            Data          Loja  Preco Unitario  \n",
+              "0     30/06/2018      Curitiba            2500  \n",
+              "1     14/09/2018        Recife            2500  \n",
+              "2     21/10/2018     Fortaleza            2100  \n",
+              "3     07/08/2018     Fortaleza            5300  \n",
+              "4     19/12/2018     Fortaleza            3400  \n",
+              "...          ...           ...             ...  \n",
+              "9994  18/05/2018     Fortaleza            2500  \n",
+              "9995  03/06/2018     Fortaleza            2100  \n",
+              "9996  22/01/2018     São Paulo            2500  \n",
+              "9997  13/06/2018  Porto Alegre            5300  \n",
+              "9998  12/10/2018      Curitiba            1400  \n",
+              "\n",
+              "[9999 rows x 8 columns]"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-536ffb56-d26f-4c35-8a3d-786d4661a4ca\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>SKU</th>\n",
+              "      <th>Produto</th>\n",
+              "      <th>Quantidade Vendida</th>\n",
+              "      <th>Primeiro Nome</th>\n",
+              "      <th>Sobrenome</th>\n",
+              "      <th>Data</th>\n",
+              "      <th>Loja</th>\n",
+              "      <th>Preco Unitario</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>HL4379</td>\n",
+              "      <td>Televisão</td>\n",
+              "      <td>5</td>\n",
+              "      <td>Gabriel</td>\n",
+              "      <td>Thoni</td>\n",
+              "      <td>30/06/2018</td>\n",
+              "      <td>Curitiba</td>\n",
+              "      <td>2500</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>HL4379</td>\n",
+              "      <td>Televisão</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Renan</td>\n",
+              "      <td>Nascimento</td>\n",
+              "      <td>14/09/2018</td>\n",
+              "      <td>Recife</td>\n",
+              "      <td>2500</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>HL1148</td>\n",
+              "      <td>Câmera</td>\n",
+              "      <td>2</td>\n",
+              "      <td>Camila</td>\n",
+              "      <td>Sobral</td>\n",
+              "      <td>21/10/2018</td>\n",
+              "      <td>Fortaleza</td>\n",
+              "      <td>2100</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>HL1918</td>\n",
+              "      <td>iPhone</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Clara</td>\n",
+              "      <td>Bruno</td>\n",
+              "      <td>07/08/2018</td>\n",
+              "      <td>Fortaleza</td>\n",
+              "      <td>5300</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>HL9962</td>\n",
+              "      <td>Android</td>\n",
+              "      <td>4</td>\n",
+              "      <td>Eduardo</td>\n",
+              "      <td>Pacheco</td>\n",
+              "      <td>19/12/2018</td>\n",
+              "      <td>Fortaleza</td>\n",
+              "      <td>3400</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9994</th>\n",
+              "      <td>HL4379</td>\n",
+              "      <td>Televisão</td>\n",
+              "      <td>2</td>\n",
+              "      <td>Caio</td>\n",
+              "      <td>Ferreira</td>\n",
+              "      <td>18/05/2018</td>\n",
+              "      <td>Fortaleza</td>\n",
+              "      <td>2500</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9995</th>\n",
+              "      <td>HL1148</td>\n",
+              "      <td>Câmera</td>\n",
+              "      <td>5</td>\n",
+              "      <td>Kim</td>\n",
+              "      <td>Ferreira</td>\n",
+              "      <td>03/06/2018</td>\n",
+              "      <td>Fortaleza</td>\n",
+              "      <td>2100</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9996</th>\n",
+              "      <td>HL4379</td>\n",
+              "      <td>Televisão</td>\n",
+              "      <td>5</td>\n",
+              "      <td>Caio</td>\n",
+              "      <td>Moraes</td>\n",
+              "      <td>22/01/2018</td>\n",
+              "      <td>São Paulo</td>\n",
+              "      <td>2500</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9997</th>\n",
+              "      <td>HL1918</td>\n",
+              "      <td>iPhone</td>\n",
+              "      <td>4</td>\n",
+              "      <td>Norman</td>\n",
+              "      <td>Jimbo</td>\n",
+              "      <td>13/06/2018</td>\n",
+              "      <td>Porto Alegre</td>\n",
+              "      <td>5300</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9998</th>\n",
+              "      <td>HL7348</td>\n",
+              "      <td>SmartWatch</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Vinícius</td>\n",
+              "      <td>Antunes</td>\n",
+              "      <td>12/10/2018</td>\n",
+              "      <td>Curitiba</td>\n",
+              "      <td>1400</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>9999 rows × 8 columns</p>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-536ffb56-d26f-4c35-8a3d-786d4661a4ca')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-536ffb56-d26f-4c35-8a3d-786d4661a4ca button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-536ffb56-d26f-4c35-8a3d-786d4661a4ca');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Cenwk-0_feTz"
       },
       "execution_count": null,
       "outputs": []
