--- a/vendas.ipynb
+++ b/vendas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO5ydEpoLOIZaAQRUg8AhPs",
+      "authorship_tag": "ABX9TyM03xu4BeqRN/G3mBfbR5yr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Natalia-SB/Portfolio/blob/main/vendas.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Natalia-SB/portfolio/blob/main/vendas.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -58,7 +58,7 @@
       "source": [
         "\n",
         "\n",
-        "### 2.Importação de biblioteca e dados\n"
+        "### 2. Importação de biblioteca e dados\n"
       ],
       "metadata": {
         "id": "HyBvPM01rvoJ"
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 1,
       "metadata": {
         "id": "tvUDXwYBsbgB"
       },
@@ -87,13 +87,13 @@
       "metadata": {
         "id": "lu21zg6fGqXQ"
       },
-      "execution_count": 43,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "### 3.Exploração de dados"
+        "### 3. Exploração de dados"
       ],
       "metadata": {
         "id": "hEqASd_PUa9I"
@@ -843,7 +843,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Transformação de dados"
+        "## 5. Transformação de dados"
       ],
       "metadata": {
         "id": "td_JcXs4YduL"
@@ -894,12 +894,12 @@
         "display(vendas)"
       ],
       "metadata": {
-        "id": "ciiVt06lq-LO",
-        "outputId": "8201702d-36ec-4ab6-d8ba-d6e442ecccff",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
-        }
+        },
+        "id": "ciiVt06lq-LO",
+        "outputId": "8201702d-36ec-4ab6-d8ba-d6e442ecccff"
       },
       "execution_count": 54,
       "outputs": [
@@ -1247,12 +1247,12 @@
         "display(vendas)"
       ],
       "metadata": {
-        "id": "XfQCrX6mr4Fe",
-        "outputId": "32ee3173-1da4-4730-affe-74af5149d521",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
-        }
+        },
+        "id": "XfQCrX6mr4Fe",
+        "outputId": "32ee3173-1da4-4730-affe-74af5149d521"
       },
       "execution_count": 65,
       "outputs": [
@@ -1527,6 +1527,22 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "NZoNVB43itsB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "DgADjZkniuRZ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
