--- a/vendas.ipynb
+++ b/vendas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM03xu4BeqRN/G3mBfbR5yr",
+      "authorship_tag": "ABX9TyPxxoJYfnYoyVvcFLr/eOPs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "> A empresa precisa prever quais os produtos mais vendidos e que loja está faturando mais"
+        "> A empresa precisa prever quais os produtos mais vendidos, que loja está faturando mais em determinado periodo de tempo, assim podendo definir uma meta clara de aumento de vendas com base em métricas"
       ],
       "metadata": {
         "id": "6EtRERKh2Awd"
@@ -1530,9 +1530,22 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "## 6. Análise dos dados"
+      ],
       "metadata": {
         "id": "NZoNVB43itsB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "> Após a limpeza e transformação dos dados será feita a análise dos dados em busca de *insights* para a melhoria das vendas\n"
+      ],
+      "metadata": {
+        "id": "C5kPYDiCD4ES"
       }
     },
     {
