--- a/vendas.ipynb
+++ b/vendas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNJ7Iwaaxe3ew+UqIX3A0Ot",
+      "authorship_tag": "ABX9TyMfUPONEkkIS7M2MdN1aQdo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "tvUDXwYBsbgB"
       },
@@ -89,7 +89,7 @@
       "metadata": {
         "id": "lu21zg6fGqXQ"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -657,13 +657,13 @@
       "metadata": {
         "id": "r8sHIcNvHJrB"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## 5. Transformação de dados"
+        "### 5. Transformação de dados"
       ],
       "metadata": {
         "id": "td_JcXs4YduL"
@@ -693,7 +693,7 @@
       "metadata": {
         "id": "BcFzV8TKceYD"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -705,7 +705,7 @@
       "metadata": {
         "id": "AkEeHJtUqY_o"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -721,7 +721,7 @@
         "id": "ciiVt06lq-LO",
         "outputId": "29efb028-b72e-4abe-c05f-652fa3f62334"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1019,7 +1019,7 @@
       "metadata": {
         "id": "Cenwk-0_feTz"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1031,7 +1031,7 @@
       "metadata": {
         "id": "56dejue7rmbm"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1043,7 +1043,7 @@
       "metadata": {
         "id": "up6-cUvmsFkc"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1058,7 +1058,7 @@
       "metadata": {
         "id": "XHLL2i4pto9G"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1074,7 +1074,7 @@
         "id": "XfQCrX6mr4Fe",
         "outputId": "dd04daab-ffd3-4977-cc69-741f24a25136"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1351,7 +1351,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 6. Análise dos dados"
+        "### 6. Análise dos dados"
       ],
       "metadata": {
         "id": "NZoNVB43itsB"
@@ -1380,7 +1380,7 @@
         "id": "bobdwzyCY-d6",
         "outputId": "ff372ba1-3402-4643-f544-2c04b7a32ef1"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1410,7 +1410,7 @@
         "id": "o5Oh_2kxZGT4",
         "outputId": "8f4eecbb-59da-4074-9557-19a4760446ce"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1442,7 +1442,7 @@
         "id": "DgADjZkniuRZ",
         "outputId": "aaa9f1f8-0b29-4355-f09c-5e14f603e9d1"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1476,7 +1476,7 @@
         "id": "8aJRJdU3Zola",
         "outputId": "2fb06c8f-b743-41ab-cd97-9c8296883d74"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1660,7 +1660,7 @@
         "id": "uxzWneDqaC_n",
         "outputId": "33b6164f-04d2-4ffa-fe17-dbf523121727"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1876,7 +1876,7 @@
         "id": "ER7DzPfMazN0",
         "outputId": "06c9eaa2-5502-4ee4-8d3f-f2bc590a6f2b"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2076,7 +2076,7 @@
         "id": "_tpMyzE9ujtG",
         "outputId": "d3e380a9-a523-441c-870a-9fb700de4b8a"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2107,7 +2107,7 @@
         "id": "Zwp0YRft1Zmv",
         "outputId": "574897c9-5f66-4c9f-d6ff-07a9675b7beb"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2145,7 +2145,7 @@
         "id": "yr5dLto21k1A",
         "outputId": "bbf3340b-69d0-441c-f323-45a5ada3f532"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
