--- a/churn.ipynb
+++ b/churn.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP7seaZMs4any1BZjl0HIkg",
+      "authorship_tag": "ABX9TyMvj4w6rEDGJ4Afa89hDqzD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -743,7 +743,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 5. Transformação de dados"
+        "\n",
+        "### 5. Exploração dos dados"
       ],
       "metadata": {
         "id": "YcqkzVU3wD7v"
@@ -754,7 +755,7 @@
       "source": [
         "\n",
         "\n",
-        "> A transformação dos dados trará uma melhor visualização e entendimento dos dados\n",
+        "> A exploração dos dados trará *insights* e entendimento dos dados\n",
         "\n"
       ],
       "metadata": {
